--- a/env.example
+++ b/env.example
@@ -6,16 +6,15 @@
 # Komenda: copy env.example .env.local (Windows)
 # lub: cp env.example .env.local (Mac/Linux)
 
-# OpenAI API Key (opcjonalne - dla chatbota)
-# Uzyskaj klucz na: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-...
+# Google Gemini API Key (dla chatbota)
+# Uzyskaj klucz na: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=AIza...
+
+# (Opcjonalne) OpenAI API Key - alternatywa dla Gemini
+# OPENAI_API_KEY=sk-...
 
 # Email (opcjonalne - dla formularza kontaktowego)
-# Możesz użyć Resend, SendGrid, Nodemailer itp.
 # RESEND_API_KEY=re_...
-# SMTP_HOST=
-# SMTP_USER=
-# SMTP_PASSWORD=
 
 # Analytics (opcjonalne)
 # NEXT_PUBLIC_GA_ID=G-...
