--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@next/mdx": "^14.2.3",
+    "@emailjs/browser": "^4.4.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^4.4.1",
-    "react-markdown": "^9.0.1",
+    "@next/mdx": "^14.2.3",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.378.0",
-    "tailwind-merge": "^2.3.0",
-    "clsx": "^2.1.1"
+    "next": "14.2.3",
+    "next-mdx-remote": "^4.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
-
