New API key, switched to open AI

--- a/env.example
+++ b/env.example
@@ -6,12 +6,13 @@
 # Komenda: copy env.example .env.local (Windows)
 # lub: cp env.example .env.local (Mac/Linux)
 
-# Google Gemini API Key (dla chatbota)
-# Uzyskaj klucz na: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=AIza...
+# OpenAI API Key (dla chatbota)
+# Uzyskaj klucz na: https://platform.openai.com/api-keys
+# Używamy modelu gpt-4o-mini (tani i wydajny)
+OPENAI_API_KEY=sk-...
 
-# (Opcjonalne) OpenAI API Key - alternatywa dla Gemini
-# OPENAI_API_KEY=sk-...
+# (Opcjonalne) Google Gemini API Key - alternatywa dla OpenAI
+# GEMINI_API_KEY=AIza...
 
 # Email (opcjonalne - dla formularza kontaktowego)
 # RESEND_API_KEY=re_...
