--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@formatjs/intl-localematcher": "^0.7.3",
     "@google/generative-ai": "^0.24.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
@@ -18,14 +19,17 @@
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.378.0",
+    "negotiator": "^1.0.0",
     "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
