Add contact form with n8n integration

--- a/env.example
+++ b/env.example
@@ -20,3 +20,8 @@ OPENAI_API_KEY=sk-...
 # Analytics (opcjonalne)
 # NEXT_PUBLIC_GA_ID=G-...
 
+# n8n Webhook (dla formularza kontaktowego)
+# URL webhooka n8n, np. https://your-n8n.example.com/webhook/contact
+N8N_WEBHOOK_URL=
+# Token autoryzacyjny dla webhooka (opcjonalny, ale zalecany)
+N8N_WEBHOOK_TOKEN=
