feat: add AI metrics API with n8n webhook support

--- a/env.example
+++ b/env.example
@@ -25,3 +25,7 @@ OPENAI_API_KEY=sk-...
 N8N_WEBHOOK_URL=
 # Token autoryzacyjny dla webhooka (opcjonalny, ale zalecany)
 N8N_WEBHOOK_TOKEN=
+
+# n8n Webhook (dla AI Metrics - aktualizacja danych z zewnętrznych źródeł)
+# Token autoryzacyjny dla endpointu /api/ai-metrics (POST)
+N8N_AI_METRICS_TOKEN=
